# test_cpp_actions

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/tcg/: CMakeLists.txt  sum.cpp  sum.h
tests/: CMakeLists.txt  test_sum.cpp
